Kleopatra: Entries in completion of certificate input field are not sorted
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Jun 1 2023, 11:39 AM
Tags

Description

The entries in the completion pop-up of the certificate input field (e.g. used for "Encrypt for others" certificates in Notepad or Sign/Encrypt dialog) are not sorted alphabetically which makes it difficult to find an entry in the list.

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker added projects: Restricted Project, kleopatra.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Jun 1 2023, 12:31 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Notes for testing:

  • First certificates and groups are sorted by their "display name" (i.e. the part of the displayed text before the parenthesis with the other properties).
  • Groups are sorted before certificates if both have the same "display name".
  • Groups with identical name are sorted by their internal ID. (Probably doesn't make much sense to test this.)
  • Certificates with identical "display name" are sorted by validity, then by creation of newest valid subkey, and finally by fingerprint.
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

works (I did only check the first 2 criteria)