Make keyToString public as nameAndEmailForSummaryLine

This allows comparing that part of the summary line that is relevant for
sorting certificates alphabetically.

GnuPG-bug-id: 6514